--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 # (Using that method instead of site.owner, in case your posts get cloned with your repo.)
 
 # Site settings
-title: GJX
+title: WinnieGJX2
 description: Welcome to GJX's personal webside.
 owner:
   name: guojiaxin # or company name
