--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,8 @@
 # authors
 
 arkadianriver:
-  name: Gary Faircloth
-  bio: >
-    Interests: tech writing, programming, science, history.
-    You might also find me playing some PC Ga&mdash;SQUIRREL!
-  disqus_shortname: arkadianriver
-  url: http://arkadianriver.com
-  email: gfair@arkadianriver.com
+  name: Guojiaxin
+  disqus_shortname: WinnieGJX2
+  url: http://WinnieGJX2.com
+  email: 276999894@qq.com
   avatar: gar.jpg
